--- a/project/build.properties
+++ b/project/build.properties
@@ -1,7 +1,7 @@
 #Project properties
 #Fri Apr 23 11:24:20 PDT 2010
 project.organization=Lift
-project.name=RF Website
+project.name=Lift-Standalone
 sbt.version=0.7.5.RC0
 project.version=0.1
 def.scala.version=2.8.1
